# QtBitcoinTrader

./: .gitattributes  .gitignore  README.md  index.html  params.json  update.txt  versions.txt  versionsbeta.txt
SRC/: BitcoinTrader.pro  BitcoinTrader.sln  addrulewindow.cpp  addrulewindow.ui  bitcointrader.h  feecalculator.h  gsgtrader.ui  julylightchanges.cpp  julylightchanges.h  main.cpp  main.h  socketthread.cpp  socketthread.h  tempwindow.cpp
javascripts/: main.js
src/: BitcoinTrader.pro  CMakeLists.txt  LICENSE.GPL3  QtBitcoinTrader.desktop  QtBitcoinTrader.plist  QtBitcoinTrader.pro  QtBitcoinTrader.sln  QtBitcoinTrader.vcxproj  QtBitcoinTraderMobility.pro  QtBitcoinTrader_Desktop.pro  QtBitcoinTrader_Mac.pro  QtBitcoinTrader_Mobility.pro  QtResource.qrc  Settings.set  WinResource.rc  aboutdialog.cpp  aboutdialog.h  addruledialog.cpp  addruledialog.h  addruledialog.ui  addrulegroup.cpp  addrulegroup.h  addrulegroup.ui  addrulewindow.cpp  addrulewindow.h  addrulewindow.ui  addscriptwindow.cpp  addscriptwindow.h  addscriptwindow.ui  allexchangesdialog.cpp  allexchangesdialog.h  allexchangesmodel.cpp  allexchangesmodel.h  apptheme.cpp  apptheme.h  audioplayer.cpp  audioplayer.h  bitcointrader.cpp  bitcointrader.h  bitcointraderupdater.cpp  (+181 more)
src/ Ресурсы/ Обмены/: List.ini
src/Resources/: CertBase.cer  Currencies.ini  Currencies.map  CurrenciesBTCChina.map  CurrenciesBTCe.map  CurrenciesBitstamp.map  CurrenciesMtGox.map  Public.key  QtBitcoinTrader.icns
src/Resources/Exchanges/: BTCChina.ini  BTCe.ini  Binance.ini  BitCurex.ini  BitMarket.ini  Bitfinex.ini  Bitstamp.ini  Bittrex.ini  Cryptsy  GOCio.ini  HitBTC.ini  Indacoin.ini  LakeBTC.ini  List.ini  MtGox.ini  OKCoin.ini  Poloniex.ini  QtTrader.ini  WEX.ini  YObit.ini  Zaif.ini
src/Resources/Language/: Bulgarian.lng  Chinese.lng  Chinese_OLD.lng  Czech.lng  Dutch.lng  English.lng  French.lng  German.lng  Italiano.lng  Japanese.lng  Korean.lng  LangList.ini  Norwegian.lng  Polish.lng  Russian.lng  Spanish.lng  Turkish.lng  Ukrainian.lng  Български.lng
src/Resources/Templates/: 001.qbtrule  002.qbtrule  003.qbtrule
src/Resources/Themes/: Dark.thm  Gray.thm  Light.thm
src/charts/: chartsmodel.cpp  chartsmodel.h  chartsview.cpp  chartsview.h  chartsview.ui
src/config/: config_manager.cpp  config_manager.h  config_manager_dialog.cpp  config_manager_dialog.h  config_manager_dialog.ui
src/debian/: README.Debian  README.source  changelog  control  copyright  rules
src/dock/: dock_host.cpp  dock_host.h
src/exchange/: exchange.cpp  exchange.h  exchange_binance.cpp  exchange_binance.h  exchange_bitcurex.cpp  exchange_bitcurex.h  exchange_bitfinex.cpp  exchange_bitfinex.h  exchange_bitmarket.cpp  exchange_bitmarket.h  exchange_bitstamp.cpp  exchange_bitstamp.h  exchange_bittrex.cpp  exchange_bittrex.h  exchange_btcchina.cpp  exchange_btcchina.h  exchange_btce.cpp  exchange_btce.h  exchange_gocio.cpp  exchange_gocio.h  exchange_hitbtc.cpp  exchange_hitbtc.h  exchange_indacoin.cpp  exchange_indacoin.h  exchange_okcoin.cpp  exchange_okcoin.h  exchange_poloniex.cpp  exchange_poloniex.h  exchange_wex.cpp  exchange_wex.h  exchange_yobit.cpp  exchange_yobit.h
src/login/: allexchangesdialog.cpp  allexchangesdialog.h  allexchangesdialog.ui  allexchangesmodel.cpp  allexchangesmodel.h  exchangebutton.cpp  exchangebutton.h  exchangebutton.ui  featuredexchangesdialog.cpp  featuredexchangesdialog.h  newpassworddialog.cpp  newpassworddialog.h  newpassworddialog.ui  passworddialog.cpp  passworddialog.h  passworddialog.ui  qttraderinform.cpp  qttraderinform.h
src/menu/: currencymenu.cpp  currencymenu.h  currencymenu.ui  currencymenucell.cpp  currencymenucell.h  currencymenucell.ui  networkmenu.cpp  networkmenu.h  networkmenu.ui
src/news/: newsmodel.cpp  newsmodel.h  newsview.cpp  newsview.h  newsview.ui
src/platform/: procdestructor.cpp  procdestructor.h  socket.cpp  socket.h  sound.cpp  sound.h
src/script/: addruledialog.cpp  addruledialog.h  addruledialog.ui  addrulegroup.cpp  addrulegroup.h  addrulegroup.ui  addscriptwindow.cpp  addscriptwindow.h  addscriptwindow.ui  ruleholder.cpp  ruleholder.h  rulescriptparser.cpp  rulescriptparser.h  rulesmodel.cpp  rulesmodel.h  rulewidget.cpp  rulewidget.h  rulewidget.ui  scriptobject.cpp  scriptobject.h  scriptobjectthread.cpp  scriptobjectthread.h  scriptwidget.cpp  scriptwidget.h  scriptwidget.ui
src/settings/: settingsdecimals.cpp  settingsdecimals.h  settingsdecimals.ui  settingsdialog.cpp  settingsdialog.h  settingsdialoglistelement.cpp  settingsdialoglistelement.h  settingsdialoglistelement.ui  settingsgeneral.cpp  settingsgeneral.h  settingsgeneral.ui  settingsnetworkproxy.cpp  settingsnetworkproxy.h  settingsnetworkproxy.ui
src/utils/: currencysignloader.cpp  currencysignloader.h  traderspinbox.cpp  traderspinbox.h  utils.cpp  utils.h
src2/: bitcointrader.cpp  bitcointraderupdater.h  feecalculator.ui  gsgTrader.rc  gsgtrader.qrc  tempwindow.ui
